--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
   "name": "@moaqz/config",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^9.17.0",
+    "eslint-config-moaqz": "^0.1.0"
+  },
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  }
 }
