--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -1,4 +1,4 @@
-// Last update 2024-12-19
+// Last update 2024-12-20
 {
   // ========== Visuals ==========
   "editor.fontFamily": "CaskaydiaCove Nerd Font",
@@ -60,6 +60,8 @@
     "**/CHANGELOG*": true,
     "**/LICENSE*": true
   },
+  "files.autoSave": "afterDelay",
+  "html.autoClosingTags": true,
 
   // ========== ESLint ========== 
   "eslint.codeAction.showDocumentation": {
