--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "@moaqz/config",
   "type": "module",
   "devDependencies": {
+    "@eslint/config-inspector": "^1.0.2",
     "eslint": "^9.17.0",
     "eslint-config-moaqz": "^0.1.0"
   },
   "scripts": {
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "inspect": "eslint-config-inspector"
   }
 }
