--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "@moaqz/config",
+  "version": "0.2.0",
   "type": "module",
   "devDependencies": {
     "@eslint/config-inspector": "^1.0.2",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "citty": "^0.1.6",
     "eslint": "^9.17.0",
-    "eslint-config-moaqz": "^0.3.0"
+    "eslint-config-moaqz": "^0.3.0",
+    "rollup": "^4.40.2"
   },
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "inspect": "eslint-config-inspector",
-    "build:inspector": "eslint-config-inspector build"
+    "build:inspector": "eslint-config-inspector build",
+    "build": "rollup -c"
   }
 }
